--- a/app/src/main/res/layout/auto_fragment.xml
+++ b/app/src/main/res/layout/auto_fragment.xml
@@ -36,8 +36,9 @@
         android:autofillHints=""
         android:background="@color/teal_200"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/marca_modelo_veiculo"
+        android:inputType="textPersonName"
+        android:textColorHint="#004D40"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,12 +46,12 @@
 
     <EditText
         android:id="@+id/txtDescricaoVeiculo"
-        android:layout_width="381dp"
-        android:layout_height="126dp"
+        android:layout_width="380dp"
+        android:layout_height="200dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="280dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="168dp"
+        android:layout_marginBottom="120dp"
         android:autofillHints=""
         android:background="@color/teal_200"
         android:ems="10"
@@ -58,14 +59,15 @@
         android:hint="@string/descrico_do_veiculo"
         android:inputType="textPersonName"
         android:text=""
+        android:textColorHint="#004D40"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.285"
+        app:layout_constraintHorizontal_bias="0.266"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtMarcaModelo"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.986" />
 
     <Button
         android:id="@+id/btnGravarCarro"
@@ -76,20 +78,22 @@
         android:text="@string/gravar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnCancelarCarro"
-        app:layout_constraintHorizontal_bias="0.057"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoVeiculo" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoVeiculo"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnCancelarCarro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/cancelar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoVeiculo" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoVeiculo"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="378dp"
@@ -112,17 +116,30 @@
             android:layout_height="55dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:autofillHints="name"
             android:ems="17"
             android:hint="@string/chassi_example"
-            android:autofillHints="name"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
 
-            />
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btnDeleteAuto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_red_dark"
+        android:text="@string/excluir"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnCancelarCarro"
+        app:layout_constraintHorizontal_bias="0.455"
+        app:layout_constraintStart_toEndOf="@+id/btnGravarCarro"
+        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoVeiculo"
+        app:layout_constraintVertical_bias="0.555" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
