--- a/app/src/main/res/layout-v26/fragment_list_auto.xml
+++ b/app/src/main/res/layout-v26/fragment_list_auto.xml
@@ -39,24 +39,17 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="270dp"
+            android:layout_marginStart="220dp"
             android:layout_marginEnd="1dp"
             android:contentDescription="@string/sign_out"
             android:src="@drawable/ic_exit_24" />
+
         <ImageButton
             android:id="@+id/imgBtnHome"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:tooltipText="home"
-            android:src="@drawable/ic_home" />
-        <TextView
-            android:id="@+id/txtNewCar"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="#275ADB"
-            android:layout_marginBottom="26dp"
-            android:text="@string/new_auto" />
+            android:src="@drawable/ic_home"
+            android:tooltipText="home" />
 
     </androidx.appcompat.widget.Toolbar>
 
