--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -12,42 +12,10 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:layout_width="365dp"
-            android:layout_height="43dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp"
-            android:text="@string/type_new_user"
-            android:textAlignment="viewStart"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/txtNovoUsuario"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/txtNovoUsuario"
-            android:layout_width="364dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="72dp"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="@string/nome"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:autofillHints="" />
-
-        <TextView
             android:id="@+id/lblNovoEmail"
             android:layout_width="365dp"
             android:layout_height="43dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
             android:text="@string/type_new_email"
             android:textAlignment="viewStart"
@@ -55,7 +23,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtNovoUsuario" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/txtNovoEmail"
@@ -66,8 +34,8 @@
             android:layout_marginEnd="8dp"
             android:autofillHints=""
             android:ems="10"
-            android:inputType="textEmailAddress"
             android:hint="@string/email"
+            android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.516"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,14 +55,14 @@
             app:layout_constraintTop_toBottomOf="@+id/txtNovoEmail" />
 
         <EditText
-            android:id="@+id/txtPassword"
+            android:id="@+id/txtNovoPassword"
             android:layout_width="364dp"
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
             android:autofillHints=""
             android:ems="10"
-            android:inputType="textPassword"
             android:hint="@string/password"
+            android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lblPassword" />
@@ -109,7 +77,7 @@
             app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
             app:layout_constraintHorizontal_bias="0.486"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/txtNovoPassword" />
 
         <Button
             android:id="@+id/btnCancelar"
@@ -119,7 +87,7 @@
             android:layout_marginEnd="60dp"
             android:text="@string/cancelar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/txtNovoPassword" />
 
         <ImageView
             android:layout_width="wrap_content"
