--- a/app/src/main/res/layout/fragment_success.xml
+++ b/app/src/main/res/layout/fragment_success.xml
@@ -24,8 +24,9 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp"
         tools:text="@string/resgistro_ok"
         tools:visibility="visible" />
 
