--- a/app/src/main/res/layout/fragment_list_auto.xml
+++ b/app/src/main/res/layout/fragment_list_auto.xml
@@ -3,62 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/list_auto_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple_200"
     android:orientation="vertical"
     tools:context="com.jussa.locaautos.ui.auto.ListAutoFragment">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarListAuto"
-        android:layout_width="match_parent"
-        android:layout_height="71dp"
-        android:background="@android:color/black"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:titleTextColor="@android:color/holo_red_dark">
-
-        <ImageButton
-            android:id="@+id/imgBtnNewCar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:contentDescription="@string/new_car_for_rent"
-            android:src="@drawable/ic_car_automobile" />
-
-        <ImageButton
-            android:id="@+id/imgBtnSignOut"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="270dp"
-            android:layout_marginEnd="1dp"
-            android:contentDescription="@string/sign_out"
-            android:src="@drawable/ic_exit_24" />
-        <ImageButton
-            android:id="@+id/imgBtnHome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tooltipText="home"
-            android:src="@drawable/ic_home" />
-        <TextView
-            android:id="@+id/txtNewCar"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="#275ADB"
-            android:layout_marginBottom="26dp"
-            android:text="@string/new_auto" />
-
-    </androidx.appcompat.widget.Toolbar>
+    <include layout="@layout/auto_tool_bar"></include>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewAuto"
@@ -67,22 +19,6 @@
         android:layout_below="@+id/toolbarListAuto"
         android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-    <LinearLayout
-        android:id="@+id/lnrLayoutDeleteItens"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:visibility="invisible"
-        >
-        <Button
-            android:id="@+id/btnDeleteItens"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/delete_itens"
-            >
-        </Button>
-    </LinearLayout>
 
 
 </RelativeLayout>
