--- a/app/src/main/res/menu/delete_menu.xml
+++ b/app/src/main/res/menu/delete_menu.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
         android:id="@+id/menu_delete"
         android:title="@string/delete"
         android:icon="@drawable/ic_delete_24"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         />
-    <item
-        android:id="@+id/menu_select_all"
-        android:title="@string/select_all"
-        android:icon="@drawable/ic_baseline_check_circle_24"
-        app:showAsAction="always"/>
 </menu>
