--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/blue_jussa</item>
+        <item name="colorAccent">@color/purple_200</item>
+    </style>
     <style name="counterText">
         <item name="android:textColor">#aa5353cc</item>
     </style>
