--- a/app/src/main/res/layout/auto_tool_bar.xml
+++ b/app/src/main/res/layout/auto_tool_bar.xml
@@ -40,14 +40,13 @@
             android:src="@drawable/ic_home" />
 
         <ImageButton
-            android:id="@+id/imgBtnExcluir"
+            android:id="@+id/imgAbout"
+            android:contentDescription="@string/about"
             android:backgroundTint="@color/white"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
-            android:src="@drawable/ic_delete_24"
-            android:contentDescription="@string/excluir"
-            android:visibility="invisible"
-            />
+            android:layout_height="50dp"
+            android:src="@drawable/about" />
+
 </androidx.appcompat.widget.Toolbar>
