--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -13,11 +13,22 @@
     tools:context=".ui.about.AboutFragment"
     >
 
+    <ImageView
+        android:id="@+id/labelTextViewLogo"
+        android:layout_width="113dp"
+        android:layout_height="122dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/new_loca_auto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/labelTextViewVersion"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/roundCorner" />
+
     <TextView
         android:id="@+id/labelTextViewVersion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:layout_marginTop="140dp"
         android:layout_marginEnd="24dp"
         android:autofillHints="emailAddress"
@@ -33,23 +44,18 @@
 
     <TextView
         android:id="@+id/labelTextViewDevelopers"
-        android:layout_width="323dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="24dp"
+        android:layout_width="356dp"
+        android:layout_height="41dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="password"
         android:hint="@string/developers"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword"
         android:minHeight="48dp"
         android:selectAllOnFocus="true"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/labelTextViewVersion"
         app:layout_constraintTop_toBottomOf="@+id/labelTextViewVersion" />
 
     <Button
@@ -61,10 +67,10 @@
         android:text="@string/voltar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.123"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/labelTextViewDevelopers"
         app:layout_constraintTop_toBottomOf="@+id/labelTextViewDevelopers"
-        app:layout_constraintVertical_bias="0.063" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ProgressBar
         android:layout_width="368dp"
